# QuerySense

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  package-lock.json  package.json  test-onboarding-guide.txt  test-vacation-policy.txt
.next/: trace
backend/ai-service/: README.md  config.py  config_simple.py  main.py  main_complete.py  main_simple.py  requirements.txt  reset_and_improve.py  setup.ps1  setup.py  setup_database.ps1  setup_database.sql  setup_database_fixed.ps1  test_deepseek_models.py  test_similarity.py
backend/ai-service/app/: answer_generation.py  answer_generation_ai.py  answer_generation_fixed.py  answer_generation_new.py  answer_generation_old.py  answer_generation_premium.py  database.py  database_simple.py  deepseek_answer_generator.py  deepseek_models_comparison.py  document_processor.py  embedding_service.py  enhanced_deepseek_generator.py  production_deepseek_integration.py  smart_answer_generator.py  ultimate_answer_generator.py
backend/api-server/: package-lock.json  package.json  server.js
backend/api-server/src/processors/: DocumentProcessor.js
docs/: DEVELOPMENT_PHASES.md  PROJECT_STRUCTURE.md
frontend/: index.html  package.json
frontend/src/: App.tsx
frontend/src/app/: page.tsx
frontend/src/components/: Header.tsx  Hero.tsx  QueryStudio.tsx  UploadPanel.tsx
frontend_new/: tailwind.config.js
frontend_new/src/components/: AnalyticsPanel.tsx  Header.tsx  Hero.tsx  ProfileDropdown.tsx  QueryStudio.tsx  UploadPanel.tsx
infrastructure/docker/postgres/: init.sql
scripts/: setup.sh
(+1 files in other folders)
